# netscaler-certbot-hook

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TODO.md  netscaler-certbot-hook.py  nitro.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_ca_certificates.py
.github/: CONTRIBUTING.md
.github/workflows/: release.yml  test.yml  tests.yml
src/netscaler_certbot_hook/: __init__.py  __main__.py  cli.py
tests/: __init__.py  test_certificate_cn.py  test_chain_rotation.py  test_integration.py
tests/mock_nitro/: README.md  __init__.py  server.py  state.py
