[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netscaler-certbot-hook"
version = "1.0.1"
authors = [
    {name = "Simon Lauger", email = "simon@lauger.de"}
]
description = "Automated SSL certificate management for Citrix NetScaler ADC using Certbot"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["netscaler", "citrix", "adc", "certbot", "letsencrypt", "ssl", "certificate", "automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: System :: Systems Administration",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
dependencies = [
    "pyOpenSSL>=20.0.0",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/slauger/netscaler-certbot-hook"
Documentation = "https://github.com/slauger/netscaler-certbot-hook#readme"
Repository = "https://github.com/slauger/netscaler-certbot-hook"
Issues = "https://github.com/slauger/netscaler-certbot-hook/issues"
Changelog = "https://github.com/slauger/netscaler-certbot-hook/blob/master/CHANGELOG.md"

[project.scripts]
netscaler-certbot-hook = "netscaler_certbot_hook.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["netscaler_certbot_hook*"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "src/netscaler_certbot_hook/__init__.py:__version__",
]
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version}"
commit_parser = "angular"
major_on_zero = true
tag_format = "v{version}"

[tool.semantic_release.branches.master]
match = "master"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
